# IDS

./: Cargo.toml  POC_Communicator.py  WpfApp1.sln
Client/: App.xaml  AppTheme.cs  AttackData.cs  AttackLog.cs  AttacksPage.xaml  AttacksPage.xaml.cs  Category.cs  Client.csproj  Client.sln  Column.cs  Communicator.cs  DashboardPage.xaml  DashboardPage.xaml.cs  EnvFile.cs  FAQ.xaml  FAQ.xaml.cs  IP.cs  LocalAddress.cs  MAC.cs  MainWindow.xaml  MainWindow.xaml.cs  MongoDBAttackLogger.cs  RelayCommand.cs  Settings.xaml  Settings.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs  VisualizationPage.xaml  VisualizationPage.xaml.cs
Client/Themes/: Dark.xaml  Light.xaml
Server/: Cargo.toml  README.md  Server Setup.md
Server/src/: main.rs
Server/src/address/: mod.rs
Server/src/communicator/: mod.rs
Server/src/ddos_scanner/: mod.rs
Server/src/dns_scanner/: mod.rs
Server/src/download_scanner/: mod.rs
Server/src/env_file/: mod.rs
Server/src/firewall/: mod.rs
Server/src/mac/: mod.rs
Server/src/mongo_db/: mod.rs
Server/src/scanner/: mod.rs
Server/src/server/: mod.rs
Server/src/smurf_scanner/: mod.rs
Server/src/spec_scanner/: mod.rs
Server/src/xss_scanner/: mod.rs
WpfApp1/: MainWindow.xaml.cs  WpfApp1.csproj
WpfApp1/Models/: IP.cs  MongoDBAttackLogger.cs
env_files/: variables.env
src/: ip.rs  main.rs
src/communicator/: mod.rs
src/ddos_scanner/: mod.rs
src/dns_scanner/: mod.rs
src/download_scanner/: mod.rs
src/env_file/: mod.rs
src/ip/: mod.rs
src/mongo_db/: mod.rs
src/my_modules/: ip.rs  mod.rs  sniffer.rs
src/scanner/: mod.rs
src/server/: mod.rs
src/smurf_scanner/: mod.rs
src/sniffer/: mod.rs
src/spec_scanner/: mod.rs
src/xss_scanner/: mod.rs
