[package]
name = "untitled"
version = "2.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = { version = "0.21.8", features = [] }
tokio = { version = "1.33.0", features = [] }

serde = "1.0.188"
futures = "0.3.28"
pnet = "0.34.0"
urlencoding = "2.1.3"
trust-dns-client = "0.23.2"
dns-parser = "0.8.0"
trust-dns-resolver = "0.21.2"
chrono = "0.4.31"
ipaddress = "0.1.3"
[dependencies.mongodb]
features = ["tokio-runtime"]
